# nacional_poc

./: .gitignore  README.md  pyproject.toml
notes/: claude-resume.txt  docker-compose.yaml  nada anotado.txt  tao-toolkit_deepstream.txt
scripts/: analyze_dataset.py  build_split.py  make_dataset_package.py  make_training_package.py  validate_split.py
tools/: claude_resume.txt
training/: README.md  requirements.txt  train_rfdetr.py
